test/valid/66128_assignment_returns_value/assignment_returns_value.mag
-- Author: 66128, Daniel Sousa

fun main (_) : Unit -> Unit =
    var x : Int = 1;
    print(x = 5)