test/invalid-syntax/66128_unclosed_string/unclosed_string.mag
-- Author: 66128, Daniel Sousa

-- Strings must be closed

fun main (_) : Unit -> Unit = 
    const unclosedString : String = "This string is not closed;
    print(unclosedString);